package el;

enum Status {
  kOk = 0;
  kRpcErr = 30;
  kLogExists = 40;
}

enum ElLogState {
  kPaused = 1;
  kRunning = 2;
}
